Correction du bug swagger
